--- a/lab04/Makefile
+++ b/lab04/Makefile
@@ -1,8 +1,8 @@
 .PHONY: part1
 part1:
 	make clean
-	verilator --build ./SingleCycleCPU.v --exe ./example_testbench.cpp -cc --trace -Wall
-	./obj_dir/VSingleCycleCPU
+	verilator --build ./PipelineCPU.v --exe ./example_testbench.cpp -cc --trace -Wall
+	./obj_dir/VPipelineCPU
 
 .PHONY: clean
 clean:
